# momo

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  calendar_view.cpp  calendar_view.h  main.cpp  momo  parser.cpp  parser.h
app/cli/: CMakeLists.txt  main.cpp
devlog/: backlog.md  design_map.md  tech_map.md  tools.md  version0.0.1.md
scripts/: build.sh  clean.sh  run_test.sh
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt
src/app/calendar/: CMakeLists.txt
src/app/calendar/dto/: add_tag_command.h  add_tag_result.h  view_days_between_dto.h  view_days_between_query.h  view_days_between_result.h
src/app/calendar/ports/: calendar_use_case.h
src/app/calendar/use_cases/: calendar_service.cpp  calendar_service.h
src/cli/: CMakeLists.txt  README.md  app.cpp  app.h  cli_shell.cpp  cli_shell.h  command_registry.cpp  command_registry.h  main.cpp  parser.cpp  parser.h
src/controller/: CMakeLists.txt  calendar_controller.cpp  calendar_controller.h
src/domain/: CMakeLists.txt
src/domain/calendar/: date.h  date_range_service.h
src/domain/common/ports/: clock.h
src/domain/tags/: day_tags.h  rules.cpp  rules.h
src/domain/tags/ports/: day_tags_repository.h
src/infrastructure/: CMakeLists.txt
src/infrastructure/persistence/: CMakeLists.txt
src/infrastructure/persistence/memory/: day_tags_repository_memory.cpp  day_tags_repository_memory.h
src/infrastructure/time/: CMakeLists.txt  system_clock.cpp  system_clock.h
src/model/: CMakeLists.txt  Date.cpp  Date.h  date_types.h  event.h
src/presentation/: CMakeLists.txt
src/presentation/cli/: CMakeLists.txt  cli_shell.cpp  cli_shell.h
src/presentation/cli/commands/: command_registry.cpp
src/presentation/cli/controllers/: calendar_controller.cpp  calendar_controller.h
src/presentation/cli/views/: calendar_view.cpp
src/presentation/controllers/: calendar_controller.cpp
src/presentation/views/cli/: calendar_view.cpp  calendar_view.h
src/service/: README.md  calendar_service.cpp  calendar_service.h  mark_mask.h  rules.cpp  rules.h  tag_registry.cpp  tag_registry.h
src/utils/: CMakeLists.txt  date_utils.cpp  date_utils.h
src/view/: CMakeLists.txt  calendar_view.cpp  calendar_view.h
temp/: CMakeLists.txt  README.md
temp/src/: CMakeLists.txt
temp/src/boot/: CompositionRoot.cpp  CompositionRoot.h  Warmup.h
temp/src/cli/: main.cpp
temp/src/domain/calendar/: DayTagRegistry.h
temp/src/domain/time/: Date.h
temp/src/infrastructure/persistence/file/: FileTagRepository.cpp  FileTagRepository.h
temp/src/infrastructure/persistence/sqlite/: SqliteTagRepository.cpp  SqliteTagRepository.h
temp/src/presentation/mvc/controllers/: TagsController.cpp  TagsController.h
temp/src/presentation/mvc/views/: TagView.h
tests/: CMakeLists.txt
tests/ut/: CMakeLists.txt  date_utils_test.cpp  test_command_registry.cpp
tests/ut/app/: test_calendar_service.cpp
tests/ut/cli/: CMakeLists.txt  test_command_registry.cpp
tests/ut/service/: CMakeLists.txt  test_tag_registry.cpp
tests/ut/utils/: CMakeLists.txt
